nivasa-macros/tests/trybuild/scxml_handler_empty_state.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request", state = "")]
fn handler() {}

fn main() {}
